@@ -739,12 +739,12 @@ struct
 						 A"-sep"; A "";
 						 A "|";
 						 A "sed"; A "-e"; A"'s/\\*)/*)\\n/"]);*)
-    dep  ["ocaml"; "ocamldep"; "camlp4ofix"]  ["build/fix_camlp4_print.cmo"];
+(*    dep  ["ocaml"; "ocamldep"; "camlp4ofix"]  ["build/fix_camlp4_print.cmo"];
     flag ["ocaml"; "pp";       "camlp4ofix"]  (S[A"camlp4"; 
 						 A"-parser";  A"Camlp4OCamlRevisedParser";
 						 A"-parser";  A"Camlp4OCamlParser";
 						 A"-printer"; A"Camlp4OCamlPrinter";
-						 A"-printer"; A"build/fix_camlp4_print.cmo"]);
+						 A"-printer"; A"build/fix_camlp4_print.cmo"]);*)
 (*    flag ["ocaml"; "pp";       "camlp4ofix"]  (S[A"camlp4"; 
 						 A"-parser"; A"Camlp4OCamlRevisedParser";
 						 A"-parser"; A"Camlp4OCamlParser";
