@@ -12,7 +12,7 @@
 <toolchain.cma>:         link_all
 <toolchain.mli>:         pkg_sexplib,camlp4o,use_optcomp_o
 <toolchain.odoc>:        pkg_sexplib
-<extlib.mli>:            pkg_sexplib,pkg_camomile
+<extlib.mli>:            pkg_sexplib,pkg_camomile,use_optcomp_o
 <extlib.cma>:            link_all
 <extlib_threads.*>:      pkg_sexplib,pkg_threads
 <batteries_core_pack.*>: pkg_sexplib,pkg_camomile
