@@ -91,9 +91,7 @@ type stat = Gc.stat =
    the number of bytes.
 *)
 
-type control = Gc.control 
-(*TODO: workaround sexplib + ocamldoc bug
-=
+type control = Gc.control =
   { mutable minor_heap_size : int;
     (** The size (in words) of the minor heap.  Changing
        this parameter will trigger a minor collection.  Default: 32k. *)
@@ -150,8 +148,7 @@ type control = Gc.control
         can be better for programs with fragmentation problems.
         Default: 0. *)
 #endif
-
-}*)
+}
 (** The GC parameters are given as a [control] record.  Note that
     these parameters can also be initialised by setting the
     OCAMLRUNPARAM environment variable.  See the documentation of
